# nzp-sdl

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  bspfile.h  build.sh  cd_null.c  chase.c  cl_demo.c  cl_hud.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  common.c  common.h  config.h  config.h.in  config.status  configure  configure.ac  configure.lineno  d_edge.c  d_init.c  d_local.h  d_polyse.c  d_scan.c  d_surf.c  d_vars.c  draw.c  draw.h  goodlookingquake  host.c  host_cmd.c  keys.c  mathlib.c  mathlib.h  model.c  (+29 more)
.deps/: cd_sdl.Po  chase.Po  cl_demo.Po  cl_hud.Po  cl_input.Po  cl_main.Po  cl_parse.Po  cl_tent.Po  cmd.Po  common.Po  console.Po  crc.Po  cvar.Po  d_edge.Po  d_fill.Po  d_init.Po  d_modech.Po  d_part.Po  d_polyse.Po  d_scan.Po  d_sky.Po  d_sprite.Po  d_surf.Po  d_vars.Po  d_zpoint.Po  draw.Po  host.Po  host_cmd.Po  keys.Po  mathlib.Po  menu.Po  model.Po  net_bsd.Po  net_dgrm.Po  net_loop.Po  net_main.Po  net_udp.Po  net_vcr.Po  net_wso.Po  nonintel.Po  (+33 more)
Good Looking Quake/: Good Looking Quake.sln  Good Looking Quake.vcxproj  Good Looking Quake.vcxproj.filters
autom4te.cache/: output.1  requests  traces.0
rockbox/: genSubmissionPackage.sh
rockbox/apps/plugins/: SOURCES.stub  nzp.c
rockbox/apps/plugins/sdl/: SOURCES.nzp  sdl.make.stub
script/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  nzpsdl
script/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
source/: asm_draw.h  cd_sdl.c  cl_hud.c  cl_input.c  cl_parse.c  cl_tent.c  client.h  cmd.h  common.c  common.h  console.c  d_iface.h  d_modech.c  d_surf.c  draw.c  draw.h  host.c  host_cmd.c  keys.c  mathlib.c  mathlib.h  menu.c  model.c  model.h  net_dgrm.c  net_loop.c  net_loop.h  pr_cmds.c  pr_comp.h  pr_edict.c  pr_exec.c  progdefs.q1  protocol.h  quakedef.h  r_alias.c  r_bsp.c  r_edge.c  r_light.c  r_local.h  r_main.c  (+26 more)
source/.deps/: cd_sdl.Po  chase.Po  cl_demo.Po  cl_hud.Po  cl_input.Po  cl_main.Po  cl_parse.Po  cl_tent.Po  cmd.Po  common.Po  console.Po  crc.Po  cvar.Po  d_edge.Po  d_fill.Po  d_init.Po  d_modech.Po  d_part.Po  d_polyse.Po  d_scan.Po  d_sky.Po  d_sprite.Po  d_surf.Po  d_vars.Po  d_zpoint.Po  draw.Po  host.Po  host_cmd.Po  keys.Po  mathlib.Po  menu.Po  model.Po  net_bsd.Po  net_dgrm.Po  net_loop.Po  net_main.Po  net_udp.Po  net_vcr.Po  net_wso.Po  nonintel.Po  (+32 more)
